examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/false_return_reconstruct.st
language core;

extend with #type-reconstruction;

fn increment_twice(n : auto) -> auto {
  return false
}

fn main(n : Nat) -> Nat {
  return increment_twice(n)
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
